# calvin-constrained

./: .dmceconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  Makefile  Makefile-esp-rtos  README.md  actor.c  actor.h  api.c  api.h  calvin.mk  calvinsys.c  calvinsys.h  cc_api.c  cc_api.h  cc_config.h  common.c  common.h  fifo.c  fifo.h  link.c  link.h  main.c  mp_setup.sh  msgpack_helper.c  msgpack_helper.h  node.c  node.h  platform.h  platform_linux.c  platform_nrf51.c  port.c  port.h  proto.c  proto.h  scheduler.c  scheduler.h  sdk_config.h  (+13 more)
Tools/: compile_and_deploy.sh  example_config.json  json2msgpack.py  msgpack2json.py  viewconf.py
Tools/esp-config/app/: build.gradle  proguard-rules.pro
actors/: README.md  actor_button.c  actor_button.h  actor_counttimer.c  actor_counttimer.h  actor_gpioreader.c  actor_gpioreader.h  actor_gpiowriter.c  actor_gpiowriter.h  actor_identity.c  actor_identity.h  actor_mpy.c  actor_mpy.h  actor_print.c  actor_print.h  actor_temperature.c  actor_temperature.h  cc_actor_accelerometer.c  cc_actor_accelerometer.h  cc_actor_button.c  cc_actor_button.h  cc_actor_camera.c  cc_actor_camera.h  cc_actor_gpioreader.c  cc_actor_gpioreader.h  cc_actor_gpiowriter.c  cc_actor_gpiowriter.h  cc_actor_gyroscope.c  cc_actor_gyroscope.h  cc_actor_identity.c  cc_actor_identity.h  cc_actor_led.c  cc_actor_led.h  cc_actor_light.c  cc_actor_light.h  cc_actor_mpy.c  cc_actor_mpy.h  cc_actor_pickupgesture.c  cc_actor_pickupgesture.h  cc_actor_pressure.c  (+13 more)
actors/context/: cc_actor_registry_attribute.c
actors/io/: cc_actor_button.c  cc_actor_light.c  cc_actor_log.c
actors/media/: cc_actor_camera.c
actors/sensor/: cc_actor_accelerometer.c  cc_actor_coap_source.c  cc_actor_gyroscope.c  cc_actor_pickupgesture.c  cc_actor_pressure.c  cc_actor_soil_moisture.c  cc_actor_stepcounter.c  cc_actor_temperature.c  cc_actor_temperature_tagged.c  cc_actor_triggered_temperature.c
actors/std/: cc_actor_counttimer.c  cc_actor_identity.c
actors/test/: cc_actor_replica_identity.c
boards/pca10028/armgcc/: Makefile  make_flash.h
calvin_scripts/: .gitignore  README.md  cc_config_script.h  client.crt  client.key  http_get_test.calvin  http_post_test.calvin  https_get_test.calvin  mqtt_pub_test.calvin  mqtt_sub_test.calvin  mqtts_pub_test.calvin  mqtts_sub_test.calvin  temp_test.calvin
calvinsys/: cc_calvinsys.c  cc_calvinsys.h
calvinsys/common/: cc_calvinsys_attribute.c  cc_calvinsys_attribute.h  cc_calvinsys_schedule.c  cc_calvinsys_schedule.h  cc_calvinsys_timer.c  cc_calvinsys_timer.h
crypto/: README.md  crypto.c  crypto.h
libmpy/: Makefile  Makefile.upylib  Makefile.upylib.android  Makefile.upylib.arm  Makefile.upylib.esp8266  README.md  calvin_mpy_environmental.c  calvin_mpy_gpiohandler.c  calvin_mpy_port.c  calvin_mpy_port.h  cc_actor_mpy.c  cc_actor_mpy.h  cc_mpy_calvinsys.c  cc_mpy_calvinsys_capability.c  cc_mpy_common.c  cc_mpy_common.h  cc_mpy_environmental.c  cc_mpy_file.c  cc_mpy_gpiohandler.c  cc_mpy_port.c  cc_mpy_port.h  cc_mpy_socket.c  cc_mpy_socket.h  mpconfigport.h  mphalport.h  qstrdefsport.h
libmpy/modules/: calvinsys.py
libmpy/modules/context/: RegistryAttribute.py
libmpy/modules/io/: Button.py  GPIOReader.py  GPIOWriter.py  Light.py
libmpy/modules/std/: Identity.py
platform/: README.md
platform/android/: Makefile  Makefile_mpy  README.md  build_android.sh  calvinsys_android.c  calvinsys_android.h  jni_api.c  jni_api.h  platform_android.c  platform_android.c.orginal  platform_android.h
platform/android/calvin_constrained/app/: CMakeLists.txt  build.gradle
platform/android/calvin_constrained/app/src/main/: AndroidManifest.xml
platform/android/calvin_constrained/app/src/main/java/ericsson/com/calvin/calvin_constrained/: CCActivity.java  Calvin.java  CalvinBroadcastReceiver.java  CalvinCommon.java  CalvinDataListenThread.java  CalvinFCMIdService.java  CalvinFCMService.java  CalvinMessageHandler.java  CalvinService.java
platform/android/calvin_constrained/app/src/main/res/layout/: camera_layout.xml  cc_layout.xml
platform/android/calvin_constrained/app/src/main/res/menu/: menu.xml
platform/android/calvin_constrained/app/src/main/res/values/: strings.xml
platform/android/calvin_constrained/app/src/main/res/xml/: preference.xml
platform/android/calvin_constrained/app/src/test/java/ericsson/com/calvin/calvin_constrained/: ExampleUnitTest.java
platform/nrf52/: README.md  flash.sh  platform_nrf52.c
platform/x86/: Makefile  Makefile_mpy  README.md  platform_x86.c
runtime/north/: cc_actor.c  cc_actor.h  cc_actor_store.c  cc_actor_store.h  cc_app_manager.c  cc_app_manager.h  cc_common.c  cc_common.h  cc_fifo.c  cc_fifo.h  cc_link.c  cc_link.h  cc_msgpack_helper.c  cc_msgpack_helper.h  cc_node.c  cc_node.h  cc_port.c  cc_port.h  cc_proto.c  cc_proto.h  cc_token.c  cc_token.h  cc_transport.c  cc_transport.h  cc_tunnel.c  cc_tunnel.h
runtime/south/platform/android/calvin_constrained/app/: CMakeLists.txt  build.gradle  google-services.json  proguard-rules.pro
runtime/south/platform/android/calvin_constrained/app/src/androidTest/java/ericsson/com/calvin/calvin_constrained/: ExampleInstrumentedTest.java
runtime/south/platform/android/calvin_constrained/app/src/main/: AndroidManifest.xml
runtime/south/platform/android/calvin_constrained/app/src/main/java/ericsson/com/calvin/calvin_constrained/: Calvin.java  CalvinAttributes.java  CalvinCommon.java  CalvinMessageHandler.java  CalvinPreferenceFragment.java  CalvinService.java
runtime/south/platform/android/calvin_constrained/app/src/main/res/values/: colors.xml  strings.xml
runtime/south/platform/android/calvin_constrained/app/src/main/res/xml/: preference.xml
test/: README.md  calvin.confLOCAL  calvin.confPROXY  test.py  test.sh  test_mpy.sh  test_replication.py  test_setup.sh  verify_registry.py  verify_runtime.py
test/calvin_scripts/: test.calvin  test.json  test.msgpack
transport/: README.md
transport/fcm/: transport_fcm.c  transport_fcm.h
transport/lwip/: transport_lwip.c  transport_lwip.h
transport/socket/: transport_socket.c  transport_socket.h
(+125 files in other folders)
